--- a/src/modules/_item.scss
+++ b/src/modules/_item.scss
@@ -38,6 +38,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 
   li {
     display: flex;
